Update the list of reserved keywords, and prevent users from using some keywords in the input model and property

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2680,9 +2680,7 @@ The following words are reserved keywords and cannot be used as names for automa
 \styleIMI{automatically\_generated\_observer},
 \styleIMI{automatically\_generated\_x\_obs},
 \styleIMI{automaton},
-\styleIMI{bad},
 \styleIMI{before},
-\styleIMI{carto},
 \styleIMI{clock},
 \styleIMI{constant},
 \styleIMI{discrete},
@@ -2701,17 +2699,14 @@ The following words are reserved keywords and cannot be used as names for automa
 \styleIMI{initially},
 \styleIMI{invariant},
 \styleIMI{loc},
-\styleIMI{locations},
-\styleIMI{maximize},
-\styleIMI{minimize},
 \styleIMI{next},
+\styleIMI{nosync\_obs},
 \styleIMI{not},
 \styleIMI{once},
 \styleIMI{or},
 \styleIMI{parameter},
 \styleIMI{projectresult},
 \styleIMI{property},
-\styleIMI{region},
 \styleIMI{sequence},
 \styleIMI{special\_0\_clock},
 \styleIMI{stop},
@@ -2719,7 +2714,6 @@ The following words are reserved keywords and cannot be used as names for automa
 \styleIMI{synclabs},
 \styleIMI{then},
 \styleIMI{True},
-\styleIMI{unreachable},
 \styleIMI{urgent},
 \styleIMI{var},
 \styleIMI{wait},
